fixed menu on small screen

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -62,22 +62,19 @@
         display:grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 50px;
-        margin: 50px 50px 50px 0;
+        margin-right: 50px;
     }
  
-@media (max-width: 1250px) {
+@media (max-width: 900px) {
     .navbar
         .buttonBar {
             grid-gap: 20px;
         }
 }
-@media (max-width: 900px) {
+@media (max-width: 750px) {
     .navbar
         .buttonBar {
-          grid-template-columns: 1fr 1fr;
-          grid-template-rows: 1fr 1fr;
-          margin: 10px 20px 10px 0;
-          grid-gap: 10px;
+          display: none;
         }
 }
 
